--- a/project3.html
+++ b/project3.html
@@ -9,9 +9,9 @@
 <h1>Project 3 Final Submission</h1>
 <p>Please indicate your team members and the task assignment for each member:</p>
 <p>&nbsp;</p>
-<p>Anthony Santoro: </p>
-<p>Ziye Xing: </p>
-<p>Jiashun Liu: </p>
+<p>Anthony Santoro: Controller</p>
+<p>Ziye Xing: Steampunked.js, Controller</p>
+<p>Jiashun Liu: View </p>
 <p>&nbsp;</p>
 <p><a href="./">Return to project</a>.</p>
 </body>
